--- a/CarSolutioner/CarSolutioner.vbproj
+++ b/CarSolutioner/CarSolutioner.vbproj
@@ -187,5 +187,8 @@
   <ItemGroup>
     <None Include="Resources\blanco.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Copyright xd.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
