Arreglado MenuStrip colors y algunos botones

--- a/CarSolutioner/CarSolutioner.vbproj
+++ b/CarSolutioner/CarSolutioner.vbproj
@@ -98,6 +98,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Codigo\Custom Objects\CustomMenustrip.vb" />
     <Compile Include="Forms\Login.Designer.vb">
       <DependentUpon>Login.vb</DependentUpon>
     </Compile>
