--- a/CarSolutioner/CarSolutioner.vbproj
+++ b/CarSolutioner/CarSolutioner.vbproj
@@ -99,6 +99,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Codigo\Custom Objects\CustomMenustrip.vb" />
+    <Compile Include="Forms\CambiosGenerales.Designer.vb">
+      <DependentUpon>CambiosGenerales.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\CambiosGenerales.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms\Login.Designer.vb">
       <DependentUpon>Login.vb</DependentUpon>
     </Compile>
@@ -130,6 +136,9 @@
     <Compile Include="Codigo\ConnectionDB.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Forms\CambiosGenerales.resx">
+      <DependentUpon>CambiosGenerales.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Login.resx">
       <DependentUpon>Login.vb</DependentUpon>
     </EmbeddedResource>
