Esqueleto basico Perfiles
Un select case básico para determinar que interfaz abir.

Hice un form que se llama MainMenuEmpleado que es exactamente igual al otro solo que tiene un label flotando por ahi que dice SOS EMPLEADO.

Por ahora solo sirve con 1 cuenta sola (pq en lo de victor hay 1 sola cuenta) asi q si queres cambiar la ventana q te abre, o lo haces x prog o haces un UPDATE en la bd para cambiar el tipo de usuario de agarga de 1 a 0 o de 0 a 1.

--- a/CarSolutioner/CarSolutioner.vbproj
+++ b/CarSolutioner/CarSolutioner.vbproj
@@ -126,6 +126,12 @@
     <Compile Include="Forms\Login.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\MainMenuEmpleado.Designer.vb">
+      <DependentUpon>MainMenuEmpleado.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\MainMenuEmpleado.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms\MainMenu.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -156,6 +162,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Login.resx">
       <DependentUpon>Login.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MainMenuEmpleado.resx">
+      <DependentUpon>MainMenuEmpleado.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainMenu.resx">
       <DependentUpon>MainMenu.vb</DependentUpon>
