--- a/CarSolutioner/CarSolutioner.vbproj
+++ b/CarSolutioner/CarSolutioner.vbproj
@@ -127,6 +127,24 @@
     <Compile Include="Forms\Login.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\MainMenuInvitado.Designer.vb">
+      <DependentUpon>MainMenuInvitado.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\MainMenuInvitado.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MainMenuModerador.Designer.vb">
+      <DependentUpon>MainMenuModerador.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\MainMenuModerador.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MainMenuGerente.Designer.vb">
+      <DependentUpon>MainMenuGerente.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\MainMenuGerente.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms\MainMenuEmpleado.Designer.vb">
       <DependentUpon>MainMenuEmpleado.vb</DependentUpon>
     </Compile>
@@ -163,6 +181,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Login.resx">
       <DependentUpon>Login.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MainMenuInvitado.resx">
+      <DependentUpon>MainMenuInvitado.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MainMenuModerador.resx">
+      <DependentUpon>MainMenuModerador.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MainMenuGerente.resx">
+      <DependentUpon>MainMenuGerente.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainMenuEmpleado.resx">
       <DependentUpon>MainMenuEmpleado.vb</DependentUpon>
