Separar MainMenu en partes
Pude separar el menú en partes.

Además, está agregada la funcionalidad básica de Filtrar SOLO en Clientes por ahora.

Hay un archivo por "funcionalidad" del menú. Es decir, hay un archivo para reservas/alquileres, otro para clientes/usuarios, otro para vehículos, otro para empleados y otro para mant.

Hacia falta esto porque así podemos trabajar cada uno en un archivo, y no toqueteamos lo que esté haciendo el otro. De todas formas, también debería haber una branch por cada uno.

--- a/CarSolutioner/CarSolutioner.vbproj
+++ b/CarSolutioner/CarSolutioner.vbproj
@@ -114,6 +114,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Codigo\Custom Objects\CustomMenustrip.vb" />
+    <Compile Include="Forms\Menus\Admin\Partes\Mantenimiento.vb" />
+    <Compile Include="Forms\Menus\Admin\Partes\Clientes.vb" />
+    <Compile Include="Forms\Menus\Admin\Partes\Empleados.vb" />
+    <Compile Include="Forms\Menus\Admin\Partes\Reservas.vb" />
+    <Compile Include="Forms\Menus\Admin\Partes\Vehiculos.vb" />
     <Compile Include="Forms\Sub-Forms\CambiosGenerales.Designer.vb">
       <DependentUpon>CambiosGenerales.vb</DependentUpon>
     </Compile>
@@ -126,10 +131,10 @@
     <Compile Include="Forms\Sub-Forms\Login.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\MainMenus\MainMenu.vb">
+    <Compile Include="Forms\Menus\Admin\MainMenu.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\MainMenus\MainMenu.Designer.vb">
+    <Compile Include="Forms\Menus\Admin\MainMenu.Designer.vb">
       <DependentUpon>MainMenu.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
@@ -157,7 +162,7 @@
     <EmbeddedResource Include="Forms\Sub-Forms\Login.resx">
       <DependentUpon>Login.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\MainMenus\MainMenu.resx">
+    <EmbeddedResource Include="Forms\Menus\Admin\MainMenu.resx">
       <DependentUpon>MainMenu.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
