Refactorizacion Total de Alquiler
Cosas que hice:

-Lo más importante: Encapsulé todos los datos de lo que habian hecho, para no usar variables públicas. Cree una clase "ReservaSeleccionada", por lo cual todos los datos de la reserva seleccionada irán allí. No es necesario andar lidiando con variables públicas, y nos ahorramos un montón de líneas de código.

-Corri el largo del tabcontrol para tener los paneles separados de Alquiler y de Reserva

-Renombré muchas variables y cosas que habian por ahí, para seguir las naming conventions (los "EventArgs" se acostumbra llamarles con e y no con r como estaba x ahi de internet, y algunas mayúsculas etc. Es re inutil pero suma nota segun Roberto Franco seguir las "técnicas del buen programador" xd

-Las fechas de alquiler no pueden ser seteadas asi, la de inicio sí (ya que se está realizando un alquiler) pero la de alquiler fin queda en null hasta que se devuelva el veh.

-Todo lo q seria el calculo del costo va en el botoncito de cuando le damos alta a una reserva, no cuando vamos a transformar esa reserva en un alquiler. Lo que si se puede hacer ahí, sería un segundo calculo pero eso ya involucra menos variables, y seria con otros valores ya que estas "rompiendole los huevos" a la arrendadora con cambios. En lugar de varios if lo cambie a case, pero faltan cosas. Lo dejé comentado para que no moleste.

-Falta alta de reservas, y "baja" de alquileres (es decir, marcar cuando viene un cliente a devolverte el auto). Una vez eso terminado tenemos la parte "escencial 100%" del programa, pero hasta ahí nomas

-Faltan muchos filtrados, y algunas cosas en la parte de alquilar (cargar sucursales, etc)

--- a/CarSolutioner/CarSolutioner.vbproj
+++ b/CarSolutioner/CarSolutioner.vbproj
@@ -101,17 +101,21 @@
     <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
@@ -129,15 +133,16 @@
   <ItemGroup>
     <Compile Include="Codigo\Custom Objects\CustomMenustrip.vb" />
     <Compile Include="Codigo\Metodos.vb" />
-    <Compile Include="Forms\Alquilar.Designer.vb">
+    <Compile Include="Forms\Sub-Forms\Alquilar.Designer.vb">
       <DependentUpon>Alquilar.vb</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Alquilar.vb">
+    <Compile Include="Forms\Sub-Forms\Alquilar.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\Menus\Admin\Partes\Mantenimiento.vb" />
     <Compile Include="Forms\Menus\Admin\Partes\Clientes.vb" />
     <Compile Include="Forms\Menus\Admin\Partes\Empleados.vb" />
+    <Compile Include="Forms\Menus\Admin\Partes\ReservaSeleccionada.vb" />
     <Compile Include="Forms\Menus\Admin\Partes\Reservas.vb" />
     <Compile Include="Forms\Menus\Admin\Partes\Vehiculos.vb" />
     <Compile Include="Forms\Sub-Forms\CambiosGenerales.Designer.vb">
@@ -177,7 +182,7 @@
     <Compile Include="Codigo\ConnectionDB.vb" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Forms\Alquilar.resx">
+    <EmbeddedResource Include="Forms\Sub-Forms\Alquilar.resx">
       <DependentUpon>Alquilar.vb</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
