--- a/CarSolutioner/CarSolutioner.vbproj
+++ b/CarSolutioner/CarSolutioner.vbproj
@@ -178,6 +178,12 @@
       <DependentUpon>MainMenu.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\Menus\Admin\Sub-Forms\Descuento.Designer.vb">
+      <DependentUpon>Descuento.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Menus\Admin\Sub-Forms\Descuento.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms\Menus\Admin\Sub-Forms\Reconectar.Designer.vb">
       <DependentUpon>Reconectar.vb</DependentUpon>
     </Compile>
@@ -223,6 +229,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Menus\Admin\MainMenu.resx">
       <DependentUpon>MainMenu.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Menus\Admin\Sub-Forms\Descuento.resx">
+      <DependentUpon>Descuento.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Menus\Admin\Sub-Forms\Reconectar.resx">
       <DependentUpon>Reconectar.vb</DependentUpon>
