--- a/CarSolutioner/CarSolutioner.vbproj
+++ b/CarSolutioner/CarSolutioner.vbproj
@@ -184,6 +184,12 @@
     <Compile Include="Forms\Menus\Admin\Sub-Forms\Descuento.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\Menus\Admin\Sub-Forms\FinalizarAlquiler.Designer.vb">
+      <DependentUpon>FinalizarAlquiler.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Menus\Admin\Sub-Forms\FinalizarAlquiler.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms\Menus\Admin\Sub-Forms\Reconectar.Designer.vb">
       <DependentUpon>Reconectar.vb</DependentUpon>
     </Compile>
@@ -232,6 +238,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Menus\Admin\Sub-Forms\Descuento.resx">
       <DependentUpon>Descuento.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Menus\Admin\Sub-Forms\FinalizarAlquiler.resx">
+      <DependentUpon>FinalizarAlquiler.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Menus\Admin\Sub-Forms\Reconectar.resx">
       <DependentUpon>Reconectar.vb</DependentUpon>
