--- a/CarSolutioner/CarSolutioner.vbproj
+++ b/CarSolutioner/CarSolutioner.vbproj
@@ -196,6 +196,12 @@
     <Compile Include="Forms\Menus\Admin\Sub-Forms\Reconectar.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\Menus\Admin\Sub-Forms\Reserva.Designer.vb">
+      <DependentUpon>Reserva.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Menus\Admin\Sub-Forms\Reserva.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms\Menus\Admin\Sub-Forms\TelefonosCliente.Designer.vb">
       <DependentUpon>TelefonosCliente.vb</DependentUpon>
     </Compile>
@@ -244,6 +250,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Menus\Admin\Sub-Forms\Reconectar.resx">
       <DependentUpon>Reconectar.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Menus\Admin\Sub-Forms\Reserva.resx">
+      <DependentUpon>Reserva.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Menus\Admin\Sub-Forms\TelefonosCliente.resx">
       <DependentUpon>TelefonosCliente.vb</DependentUpon>
@@ -346,7 +355,6 @@
     <None Include="Resources\error.png" />
   </ItemGroup>
   <ItemGroup>
-
     <None Include="Resources\hide1.png" />
   </ItemGroup>
   <ItemGroup>
@@ -354,7 +362,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\show.png" />
-
     <None Include="Resources\icons8-Xbox X-100.png" />
   </ItemGroup>
   <ItemGroup>
@@ -368,7 +375,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\preg.png" />
-
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
