Fixes multiples (leer desc) (#79)
-Arreglado lo de años de mayor a menor

-Agregado todo el tema de elegir categoria nueva para alquilar si es que no hay, e implementado el tema del precio con esa cat (sin terminar, y sin testear pq no tenia codigo)

-Agregado el deducible en la consulta de ALQUILERES pero FALTA la columna en el dgv

-Capaz q mas cosas

--- a/CarSolutioner/CarSolutioner.vbproj
+++ b/CarSolutioner/CarSolutioner.vbproj
@@ -197,6 +197,12 @@
     <Compile Include="Forms\Menus\Admin\Sub-Forms\FinalizarAlquiler.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\Menus\Admin\Sub-Forms\ModificarReserva.Designer.vb">
+      <DependentUpon>ModificarReserva.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Menus\Admin\Sub-Forms\ModificarReserva.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms\Reconectar.Designer.vb">
       <DependentUpon>Reconectar.vb</DependentUpon>
     </Compile>
@@ -257,6 +263,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Menus\Admin\Sub-Forms\FinalizarAlquiler.resx">
       <DependentUpon>FinalizarAlquiler.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Menus\Admin\Sub-Forms\ModificarReserva.resx">
+      <DependentUpon>ModificarReserva.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Reconectar.resx">
       <DependentUpon>Reconectar.vb</DependentUpon>
